feat: font link from google fonts and colors on scss

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./index.scss" />
@@ -13,6 +13,7 @@
 
   <body>
 		<img src="images/header/entregadora.svg" alt="RamenGO" />
-		<h1>Um bom teste para você :D</h1>
+		<h1 class="title">ramenGO!</h1>
+    <h3>ラーメン</h3>
   </body>
 </html>
