--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
-    <title>Front End Test - Ramen GO</title>
+    <title>ramenGO!</title>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Enjoy a good ramen in the comfort of your house.">
+    
     <link
       href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800;900&display=swap"
       rel="stylesheet"
     />
+    <link href="./reset.css" rel="stylesheet" />
     <link rel="stylesheet" href="./index.scss" />
   </head>
 
   <body>
-		<img src="images/header/entregadora.svg" alt="RamenGO" />
-		<h1 class="title">ramenGO!</h1>
-    <h3>ラーメン</h3>
+    <header class="header">
+      <h1 class="header__logo"><img class="header__balao-azul" src="images/header/logo.png" alt="ramenGO!" /></h1>
+      <img class="header__image" src="images/header/ilustracao.png" alt="Entregadora" />
+      <h2 class="header__title">ラーメン</h3>
+      <h2 class="header__text--big">GO!</h3>
+      <h3 class="header__text">Enjoy a good ramen in the comfort of your house. Create your own ramen and choose your favorite flavour combination!</h3>
+    </header>
   </body>
 </html>
