feat: order button html and css done

--- a/index.html
+++ b/index.html
@@ -16,65 +16,70 @@
   </head>
 
   <body>
-    <header class="header">
-      <h1 class="header__logo"><img class="header__balao-azul" src="images/header/logo.png" alt="ramenGO!" /></h1>
-      <img class="header__image" src="images/header/ilustracao.png" alt="Entregadora" />
-      <h2 class="header__title">ラーメン</h3>
-      <h2 class="header__text--big">GO!</h3>
-      <h3 class="header__text">Enjoy a good ramen in the comfort of your house. Create your own ramen and choose your favorite flavour combination!</h3>
-    </header>
+    <div class="wrapper" id="order">
+      <header class="header">
+        <h1 class="header__logo"><img class="header__balao-azul" src="images/header/logo.png" alt="ramenGO!" /></h1>
+        <img class="header__image" src="images/header/ilustracao.png" alt="Entregadora" />
+        <h2 class="header__title">ラーメン</h3>
+        <h2 class="header__text header__text--big">GO!</h3>
+        <h3 class="header__text">Enjoy a good ramen in the comfort of your house. Create your own ramen and choose your favorite flavour combination!</h3>
+      </header>
 
-    <section class="selection">
-      <h2 class="selection__title">First things first: select your favorite broth.</h2>
-      <h3 class="selection__subtitle">It will give the whole flavor on your ramen soup.</h3>
+      <section class="selection">
+        <h2 class="selection__title">First things first: select your favorite broth.</h2>
+        <h3 class="selection__subtitle">It will give the whole flavor on your ramen soup.</h3>
 
-      <div class="options">
-        <div class="card broth salt">
-          <div class="card__image card__image--salt" /></div>
-          <h4 class="card__type">Salt</h4>
-          <p class="card__description">Simple like the seawater, nothing more</p>
-          <p class="card__price">US$ 10</p>
+        <div class="options">
+          <div class="card broth salt">
+            <div class="card__image card__image--salt" /></div>
+            <h4 class="card__type">Salt</h4>
+            <p class="card__description">Simple like the seawater, nothing more</p>
+            <p class="card__price">US$ 10</p>
+          </div>
+          <div class="card broth shoyu">
+            <div class="card__image card__image--shoyu" /></div>
+            <h4 class="card__type">Shoyu</h4>
+            <p class="card__description">The good old and traditional soy sauce</p>
+            <p class="card__price">US$ 10</p>
+          </div>
+          <div class="card broth miso">
+            <div class="card__image card__image--miso" /></div>
+            <h4 class="card__type">Miso</h4>
+            <p class="card__description">Paste made of fermented soybeans</p>
+            <p class="card__price">US$ 12</p>
+          </div>
         </div>
-        <div class="card broth shoyu">
-          <div class="card__image card__image--shoyu" /></div>
-          <h4 class="card__type">Shoyu</h4>
-          <p class="card__description">The good old and traditional soy sauce</p>
-          <p class="card__price">US$ 10</p>
+      </section>
+
+      <section class="selection">
+        <h2 class="selection__title">It’s time to choose (or not) your meat!</h2>
+        <h3 class="selection__subtitle">Some people love, some don’t. We have options for all tastes.</h3>
+
+        <div class="options">
+          <div class="card meat chasu">
+            <div class="card__image card__image--chasu" /></div>
+            <h4 class="card__type">Chasu</h4>
+            <p class="card__description">A sliced flavourful pork meat with a selection of season vegetables.</p>
+            <p class="card__price">US$ 10</p>
+          </div>
+          <div class="card meat yasai_vegetarian">
+            <div class="card__image card__image--yasai_vegetarian" /></div>
+            <h4 class="card__type">Yasai Vegetarian</h4>
+            <p class="card__description">A delicious vegetarian lamen with a selection of season vegetables.</p>
+            <p class="card__price">US$ 10</p>
+          </div>
+          <div class="card meat karaague">
+            <div class="card__image card__image--karaague" /></div>
+            <h4 class="card__type">Karaague</h4>
+            <p class="card__description">Three units of fried chicken, moyashi, ajitama egg and other vegetables.</p>
+            <p class="card__price">US$ 12</p>
+          </div>
         </div>
-        <div class="card broth miso">
-          <div class="card__image card__image--miso" /></div>
-          <h4 class="card__type">Miso</h4>
-          <p class="card__description">Paste made of fermented soybeans</p>
-          <p class="card__price">US$ 12</p>
-        </div>
+      </section>
+
+      <div class="container container--order">
+        <button class="button" name="order" id="order">Place my order</button>
       </div>
-    </section>
-
-    <section class="selection">
-      <h2 class="selection__title">It’s time to choose (or not) your meat!</h2>
-      <h3 class="selection__subtitle">Some people love, some don’t. We have options for all tastes.</h3>
-
-      <div class="options">
-        <div class="card meat chasu">
-          <div class="card__image card__image--chasu" /></div>
-          <h4 class="card__type">Chasu</h4>
-          <p class="card__description">A sliced flavourful pork meat with a selection of season vegetables.</p>
-          <p class="card__price">US$ 10</p>
-        </div>
-        <div class="card meat yasai_vegetarian">
-          <div class="card__image card__image--yasai_vegetarian" /></div>
-          <h4 class="card__type">Yasai Vegetarian</h4>
-          <p class="card__description">A delicious vegetarian lamen with a selection of season vegetables.</p>
-          <p class="card__price">US$ 10</p>
-        </div>
-        <div class="card meat karaague">
-          <div class="card__image card__image--karaague" /></div>
-          <h4 class="card__type">Karaague</h4>
-          <p class="card__description">Three units of fried chicken, moyashi, ajitama egg and other vegetables.</p>
-          <p class="card__price">US$ 12</p>
-        </div>
-      </div>
-    </section>
-
+    </div>
   </body>
 </html>
