feat: order button working and sending to done screen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <div class="wrapper wrapper--active" id="order">
+    <div class="wrapper wrapper--active" id="order-wrapper">
       <header class="header">
         <h1 class="header__logo"><img class="header__balao-azul" src="images/header/logo.png" alt="ramenGO!" /></h1>
         <img class="header__image" src="images/header/ilustracao.png" alt="Entregadora" />
@@ -79,10 +79,11 @@
 
       <div class="container container--order">
         <button class="button" name="order" id="order">Place my order</button>
+        <div class="loading" id="order--loading"></div>
       </div>
     </div>
 
-    <div class="wrapper" id="done">
+    <div class="wrapper" id="done-wrapper">
       DONE
     </div>
 
