feat: error message when an option is missing

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
       </div>
     </div>
 
+    <div class="error" id="error">
+      <p class="error__text" id="error__text">An error has occurred. Please try again.</p>
+    </div>
+
     <script src="./ramengo.js"></script>
   </body>
 </html>
