feat: header desktop version html and css

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
       <header class="header">
         <h1 class="header__logo"><img src="./images/header/logo.png" alt="ramenGO!" /></h1>
         <img class="header__image" src="./images/header/ilustracao.png" alt="Entregadora" />
-        <h2 class="header__title">ラーメン</h3>
-        <h2 class="header__text header__text--big">GO!</h3>
-        <h3 class="header__text">Enjoy a good ramen in the comfort of your house. Create your own ramen and choose your favorite flavour combination!</h3>
+        <div class="header__container">
+          <h2 class="header__title">ラーメン</h3>
+          <h2 class="header__text header__text--big">GO!</h3>
+          <h3 class="header__text">Enjoy a good ramen in the comfort of your house. Create your own ramen and choose your favorite flavour combination!</h3>
+          <a class="button button--header button--secondary-color" id="order-now">ORDER NOW</a>
+        </div>
       </header>
 
       <section class="selection">
@@ -97,7 +100,7 @@
         <p class="done__text">Hold on, when you least expect you will be eating your rámen. </p>
       </section>
       <div class="container container--done">
-        <button class="button button--new-order" name="new-order" id="new-order">Place new order</button>
+        <button class="button button--secondary-color" name="new-order" id="new-order">Place new order</button>
       </div>
     </div>
 
